--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="app">
             <header>
                 <div class="logo">
-                    <img src="/projekt2024/logo.png" alt="Logo" style="width: 160px" />
+                    <img src="obrazy/betklikremoved.png" alt="Logo" style="width: 160px" />
                 </div>
                 <nav>
                     <ul>
@@ -74,8 +74,8 @@
                 <em><p class="text">BEZ PODATKU</p></em>
                 <em><p class="text">NA ZAKŁADY POJEDYNCZE DO 14.04.</p></em>
             </div>
-            <h1>Witaj w Aplikacji Bukmacherskiej</h1>
-
+            <!-- <h1>Witaj w Aplikacji Bukmacherskiej</h1> -->
+            <br>
             <div id="displayIfAdmin">
                 <div id="add-bet-form">
                     <input type="text" id="event_name" placeholder="Nazwa drużyny 1" required />
@@ -136,22 +136,25 @@
 
             <script>
                 function displayAllBets() {
-                    let template = document.getElementById("betTemplate");
-                    window.bets.forEach((bet) => {
-                        let args = {
-                            event_name: bet.event_name,
-                            event_name2: bet.event_name2,
-                            draw_odds: bet.draw_odds,
-                            team1_odds: bet.team1_odds,
-                            team2_odds: bet.team2_odds,
-                            bet_id: bet.bet_id,
-                        };
+    let template = document.getElementById("betTemplate");
+    window.bets.forEach((bet) => {
+        if (bet.result === null) {
+            let args = {
+                event_name: bet.event_name,
+                event_name2: bet.event_name2,
+                draw_odds: bet.draw_odds,
+                team1_odds: bet.team1_odds,
+                team2_odds: bet.team2_odds,
+                bet_id: bet.bet_id,
+            };
 
-                        let templateText = template.innerHTML.formatUnicorn(args);
-                        let app = document.getElementById("app");
-                        app.innerHTML += templateText;
-                    });
-                }
+            let templateText = template.innerHTML.formatUnicorn(args);
+            let app = document.getElementById("app");
+            app.innerHTML += templateText;
+        }
+    });
+}
+
             </script>
         </div>
 
@@ -272,15 +275,15 @@
          <div class="official-labels">
             <div class="label">
                 <img src="./obrazy/fame.v2.png" alt="Oficjalny sponsor GAL" width="70" height="auto">
-                <p>Oficjalny sponsor GAL</p>
+                <p class="official">Oficjalny sponsor GAL</p>
             </div>
             <div class="label">
                 <img src="./obrazy/ufc.v2.png" alt="Oficjalny partner UFC" width="70" height="auto">
-                <p>Oficjalny partner UFC</p>
+                <p class="official">Oficjalny partner UFC</p>
             </div>
             <div class="label">
                 <img src="./obrazy/ruch.v2.png" alt="Sponsor strategiczny" width="70" height="auto">
-                <p>Sponsor strategiczny</p>
+                <p class="official">Sponsor strategiczny</p>
             </div>
         </div>        
         
