Zmiany 8.04.2024: -zmiany w css -naprawiono wypłacanie pieniędzy -zmieniono system sciezek na relatywny

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div style="text-align: center; margin-top: 30px;">
-            <img src="obrazy/betklikremoved.png" alt="Logo" style="width: 260px;" />
+            <img src="./obrazy/betklikremoved.png" alt="Logo" style="width: 260px;" />
           </div>
                  
         <div id="login">
