--- a/adminpanel.html
+++ b/adminpanel.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/projekt2024/logo.png" alt="Logo" style="width: 160px" />
+            <img src="./obrazy/betklikremoved.png" alt="Logo" style="width: 160px" />
         </div>
         <nav>
         </nav>
