--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="app">
             <header>
                 <div class="logo">
-                    <img src="obrazy/betklikremoved.png" alt="Logo" style="width: 160px" />
+                    <img src="./obrazy/betklikremoved.png" alt="Logo" style="width: 160px" />
                 </div>
                 <nav>
                     <ul>
